# ConfigValidTool

./: CMakeLists.txt
include/: output.h
scripts/: log_writer.sh
src/: main.cc  output.cc
